--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
             </div>
         </section>
+        <main>
         <section id="profile-section" class="profile-info">
             <div class="profile-info">
                 <img id="sofia" class="sofia-picture-profile" src="assets/images/chica1.png" alt="profile-section-picture">
@@ -142,7 +143,7 @@
                             <div id="myProgress">
                               <div id="statusBar">0%</div>
                             </div>
-                             <input type="file" value="upload" id="fileButton"/>
+                             <input type="" value="upload" id="fileButton"/>
                              <br>
                              <button onclick="move()">Subir foto</button>
                             </div>
