Actualizar repositorio al master

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3 class="followingTo">Siguiendo</h3>
             </div>
             <div id="userLanguages">
-                <h5 class="programming-languages">Lenguajes de programación:</h5>
+                <h5 class="programming-languages">Lenguajes de programación</h5>
                 <img class="icons-p" src="assets/images/apps.png" alt="React">
                 <img class="icons-p" src="assets/images/css.png" alt="CSS">
                 <img class="icons-p" src="assets/images/html.png" alt="HTML">
